[package]
name = "EXP_my_ls_2020"
version = "0.0.1"
authors = ["Emile Berrié <emile.berrie@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "my_ls"
path = "src/main.rs"

[dependencies]
structopt = "0.3.13"
ansi_term = "0.12"
chrono = "0.4.13"
libc = "0.2.72"
